[tool.poetry]
name = "archon-search"
version = "1.0.0"
description = "Enhanced search service with vector similarity and graph intelligence"
authors = ["Archon Team"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
supabase = "2.15.1"
neo4j = "^5.15.0"
httpx = "^0.28.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
qdrant-client = "^1.7.0"
redis = "^5.0.0"
semchunk = "^3.2.0"
tiktoken = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
